trunk/Archive2/93/02a6ba73fcef6c/output
main.cpp: In function 'int main()':
main.cpp:5:9: error: taking address of temporary [-fpermissive]
     &a[0];
         ^
